# new_card_game

./: .gitignore  Cargo.toml  README.md  dev.sh  prod.sh
ansuz/: Cargo.toml  Trunk.toml  index.html
ansuz/src/: main.rs
ansuz/src/data/: card.rs  hand.rs  mod.rs  table.rs
eihwaz/: Cargo.toml
eihwaz/src/: main.rs
eihwaz/src/data/: mod.rs
